# CorpCrack

./: LICENSE  README.md  pyproject.toml
src/corpcrack/: __main__.py  cli.py  generator.py
